force-app/main/default/objects/df_160_testsublist__c/df_160_testsublist__c.object-meta.xml
<CustomObject>
    <label>Testsublist</label>
    <nameField>
        <label>Testsublist Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Testsublists</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>