force-app/main/default/objects/df_160_testsublist__c/fields/testsublist_efternavn__c.field-meta.xml
<CustomField>
    <fullName>testsublist_efternavn__c</fullName>
    <label>Efternavn</label>
    <length>255</length>
    <type>Text</type>
</CustomField>