force-app/main/default/objects/df_160_testsublist__c/fields/testsublist_fornavn__c.field-meta.xml
<CustomField>
    <fullName>testsublist_fornavn__c</fullName>
    <label>Fornavn</label>
    <length>255</length>
    <type>Text</type>
</CustomField>